<?xml version="1.0"?>
<package format="3">
  <name>your_project_name</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="he_13453020249@163.com">duzhonghr</maintainer>
  <license>TODO: License declaration</license>

  <!-- 添加消息生成依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <!-- <depend>serial</depend> -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
